@@ -1,9 +1,9 @@
-/MANIFEST.bak
-/MYMETA.yml
-/Makefile
-/Makefile.old
-/Pod-Thread-*.tar.gz
-/Pod-Thread-*.tar.gz.asc
-/blib
+/Build
+/META.*
+/MYMETA.*
+/Makefile.PL
+/_build/
+/blib/
 /cover_db/
-/pm_to_blib
+*.bak
+*.tar.gz
