@@ -1,11 +1,0 @@
-^MANIFEST\.
-^Makefile$
-^Pod-Thread-.*\.tar\.gz$
-^blib/
-^cover_db/
-^pm_to_blib$
-~$
-\.old$
-\.bak$
-^\.
-/\.
